--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -6,12 +6,11 @@
 
 body {
   /* more on this crazy alphanumerical value in a minute! */
-  font-family: Helvetica, Arial, sans-serif;
   color: #39a6b2;
-  background-color: white;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-  /* apply styles to <header> */
+/* apply styles to <header> */
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
@@ -24,20 +23,19 @@ header h1 {
   margin: 0;
   display: inline;
 }
-
 header a {
   text-decoration: none;
   color: #fce138;
-}  
+}
 
 header nav {
   float: right;
   margin: 7px 0;
 }
-  
+
 header nav ul li {
   display: inline;
-}  
+}
 
 header nav ul li a {
   margin: 0 30px;
@@ -70,18 +68,17 @@ footer a {
 
 section {
   padding: 60px;
-  background-image: url("../images/hero-bg.jpg");
 }
 
 /* Hero Style Start */
 .hero {
-  background-image: url("../images/hero-bg.jpg");
+  background-image: url('../images/hero-bg.jpg');
   height: 600px;
   background-size: cover;
   background-position: center;
-  position:relative;
-  background-repeat: no-repeat;
+  position: relative;
 }
+/* Hero Style End */
 
 .hero-form {
   border: 3px solid #024e76;
@@ -98,7 +95,6 @@ section {
   font-size: 24px;
   margin: 0;
 }
-
 .hero-form p {
   margin: 5px 0 15px 0;
 }
@@ -125,21 +121,8 @@ section {
   font-size: 16px;
 }
 
-/* Hero Style End */
-
 .intro {
   text-align: center;
-}
-
-.intro h2 {
-  /* add this alongside your other declarations */
-  display: inline-block;
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  border-color: #fce138;
 }
 
 .intro p {
@@ -147,9 +130,98 @@ section {
   color: #39a6b2;
   width: 80%;
   font-size: 20px;
-  /* add this alongside your other declarations */
   margin: 0 auto;
-} 
+}
 
+.steps {
+  text-align: center;
+  background: #fce138;
+}
 
+.steps div {
+  margin-bottom: 80px;
+}
 
+.steps img {
+  width: 15%;
+  margin: 10px 0;
+}
+
+.steps h3 {
+  color: #024e76;
+  font-size: 46px;
+  margin-top: 10px;
+}
+
+.steps p {
+  color: #39a6b2;
+  font-size: 23px;
+}
+
+.steps span {
+  font-size: 38px;
+}
+
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
+.trainers {
+  text-align: center;
+}
+
+.trainer {
+  width: 900px;
+  margin: 0 auto 30px auto;
+  background: #024e76;
+  color: #fce138;
+  overflow: auto;
+}
+
+.trainer img {
+  width: 35%;
+  float: left;
+}
+
+.trainer-bio {
+  padding: 35px;
+  float: left;
+  width: 65%;
+}
+
+.trainer-bio h3 {
+  font-size: 32px;
+  margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+  font-weight: lighter;
+  font-size: 26px;
+  margin-bottom: 25px;
+}
+
+.trainer-bio p {
+  font-size: 17px;
+  line-height: 1.3;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
